--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
 dependencies {
 
     def nav_dep = "2.1.0-beta02"
-
+    implementation 'com.android.support:design:28.0.0'
 
     implementation "org.jetbrains.anko:anko:0.10.8"
     implementation "androidx.work:work-runtime-ktx:2.2.0"
